--- a/src/styles.css
+++ b/src/styles.css
@@ -12,21 +12,32 @@ h1{
 }
 
 .container{
-    margin: 1rem;
+    margin: 0;
     text-align: center;
+    justify-content: center;
+    display: flex;
+    height: 100vh;
+}
+.shadow {
+    transition: .2s;
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .1);
 }
 
-.nav{
+.shadow-none{
+    transition: .2s
+}
+
+nav{
     z-index: 2;
-    background-color: #333;
+    background: whitesmoke;
     height: 64px;
-    color: white;
     display: flex;
     justify-content: space-between;
     align-items: stretch;
     gap: 2rem;
     padding: 0 1rem;
 
+    color: black;
     position: fixed;
     top: 0;
     left: 0;
@@ -38,7 +49,7 @@ h1{
     font-size: 2rem;
 }
 
-.nav ul{
+nav ul{
     padding: 0;
     margin: 0;
     list-style: none;
@@ -47,7 +58,7 @@ h1{
     font-size: 150%;
 }
 
-.nav a{
+nav a{
     color: inherit;
     text-decoration: none;
     height: 100%;
@@ -55,11 +66,11 @@ h1{
     align-items: center;
 }
 
-.nav li.active{
+nav li.active{
     background-color: #555;
 }
 
-.nav li:hover{
+nav li:hover{
     background-color: #777;
 }
 
@@ -85,8 +96,8 @@ h1{
 .greeting{
     text-align: center;
     font-size: 200%;
-    padding-left: 20%;
-    padding-right: 20%;
+    /*padding-left: 0%;
+    padding-right: 0%;*/
     padding-bottom: 0;
     justify-content: center;
     font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans", sans-serif;
@@ -95,8 +106,8 @@ h1{
 .name{
     text-align: center;
     font-size: 750%;
-    padding-left: 20%;
-    padding-right: 20%;
+    /*padding-left: 20%;
+    padding-right: 20%;*/
     margin-top: 0;
     margin-bottom: .5%;
     justify-content: center;
@@ -104,22 +115,42 @@ h1{
 .text{
     font-size: 150%;
     text-align: center;
-    padding-left: 20%;
-    padding-right: 20%;
+    /*padding-left: 20%;
+    padding-right: 20%;*/
     margin-top: 0;
     margin-bottom: 0;
     justify-content: center;
 }
 
-bigger{
-    font-size: 225%;
-}
-
 .home{
-    height: 100%;
+    width: 100%;
+    background: linear-gradient(0deg, gray, whitesmoke 50%);
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    flex-direction: column;
+
 }
 
-html, body{
-    margin: 0;
-    height: 100%;
+/* ABOUT */
+
+.about{
+    background-color: blue;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    flex-direction: column;
+}
+
+.fade-in-section {
+    opacity: 0;
+    transform: translateY(20vh);
+    visibility: hidden;
+    transition: opacity 0.6s ease-out, transform 1.2s ease-out;
+    will-change: opacity, visibility;
+}
+.fade-in-section.is-visible {
+    opacity: 1;
+    transform: none;
+    visibility: visible;
 }
