--- a/src/styles.css
+++ b/src/styles.css
@@ -20,20 +20,21 @@ h1{
 }
 .shadow {
     transition: .2s;
-    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .1);
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .2);
 }
 
 .shadow-none{
     transition: .2s
 }
 
+/*     height: 64px;
+*/
 nav{
     z-index: 2;
     background: whitesmoke;
-    height: 64px;
     display: flex;
     justify-content: space-between;
-    align-items: stretch;
+    align-items: center;
     gap: 2rem;
     padding: 0 1rem;
 
@@ -45,15 +46,12 @@ nav{
     overflow-x: hidden;
 }
 
-.site-title{
-    font-size: 2rem;
-}
-
 nav ul{
     padding: 0;
     margin: 0;
     list-style: none;
     display: flex;
+    align-items: center;
     gap: 1rem;
     font-size: 150%;
 }
@@ -77,7 +75,7 @@ nav li:hover{
 
 a.activeNav{
     background-color: #61dafb;
-    transition: .5s
+    transition: .5s;
 }
 
 a.contentLink{
@@ -91,6 +89,9 @@ a.contentLink{
 
 a.textLink{
     border-radius: 5px;
+    padding: 8px 4px;
+    margin: 4px;
+    letter-spacing: .5px
 }
 
 img.imgLink{
@@ -99,7 +100,7 @@ img.imgLink{
     align-items: center;
     padding-left: 8px;
     padding-right: 8px;
-    height: 40%;
+    height: 25.6px;
 }
 
 /* HOME */
@@ -116,7 +117,7 @@ img.imgLink{
 
 .name{
     text-align: center;
-    font-size: 750%;
+    font-size: 600%;
     /*padding-left: 20%;
     padding-right: 20%;*/
     margin-top: 0;
@@ -135,11 +136,45 @@ img.imgLink{
 
 .home{
     width: 100%;
-    background: linear-gradient(0deg, gray, whitesmoke 50%);
+    background: /*linear-gradient(0deg, gray, whitesmoke 50%);*/ powderblue;
     display: flex;
     justify-content: center;
     align-content: center;
+    flex-direction: row;
+}
+
+.intro{
+    width: 66%;
+    aspect-ratio: 1.618;
+    background-color: blueviolet;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    display: flex;
     flex-direction: column;
+}
+
+.picture{
+    background-color: green;
+    width: 34%;
+}
+
+.introBubble{
+    /*background-color: red;*/
+    height: 80%;
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    justify-content: center;
+}
+
+.introContact{
+    /*background-color:pink;*/
+    padding: 2rem 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
 
 /* ABOUT */
@@ -172,6 +207,10 @@ img.imgLink{
 
 html{
     scroll-behavior: smooth;
+}
+
+.site-title{
+    font-size: 2rem;
 }
 
 rounded{
