--- a/src/styles.css
+++ b/src/styles.css
@@ -215,10 +215,32 @@ img.imgLink{
     justify-content: center;
     align-content: stretch;
     align-items: center;
-    flex-direction: column;
+    flex-direction: row;
 }
 
+.about-sidebar{
+    height: 100%;
+    width: 20%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
 
+.about-skills{
+    background-color: orange;
+    border-radius: 25px;
+    width: 30vh;
+    margin-bottom: 4.37vh;
+    aspect-ratio: 1/1.618;
+}
+
+.about-resume{
+    background-color: orangered;
+    border-radius: 25px;
+    width: 30vh;
+    aspect-ratio: 1.618;
+}
 /* PROJECTS */
 
 .projects{
@@ -228,9 +250,14 @@ img.imgLink{
     justify-content: center;
     align-content: stretch;
     align-items: center;
-    flex-direction: column;
+    flex-direction: row;
 }
 
+.projects-selector{
+    background-color: orange;
+    width: 21%;
+    aspect-ratio: 1/1.618;
+}
 
 /* IMPORTANT */
 
@@ -248,9 +275,10 @@ html{
 
 rounded{
     border-radius: 25px;
-    background: #21ad91;
+    background: gold;
     padding: 20px;
-    width: 55%;
+    height: 67.2vh;
+    /* height: 55%;*/
     aspect-ratio: 1.618;
     /*    height: calc(same-as-width/1.618);
 
